k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  labels:
    app: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 80
